# aig-solver

./: .gitignore  README.md
Scripts/: abc-results.py  bit-blasted-benchmarks.py  group-run-and-log.py  group-run.py  single-run.py
src/: Arena.cpp  Arena.h  CMakeLists.txt  Solver.cpp  Solver.h  aig.h  cdcl-aig.h  main.cpp  test.aag
src/CDCL/: Solver.cpp  Solver.h
src/DPLL/: DPLLSolver.cpp  DPLLSolver.h
src/Solver/: Solver.cpp  Solver.h
